--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "colors": "^1.4.0",
     "djs-selfbot-v14": "^2.18.0",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "discordio-backup": "^1.0.6"
   }
 }
